<resources>
    // Content Provider Authority
    <string name="file_provider_authority">com.jonathan.example.prepcookinventory.fileprovider</string>

    <string name="app_name">PrepCookInventory</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Prep-Cook Inventory</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Menu Strings -->
    <string name="label_inventory">Inventory</string>
    <string name="btn_new_inventory">New Inventory</string>
    <string name="btn_open_inventory">Open Inventory</string>
    <string name="label_tools">Tools</string>
    <string name="btn_clear_inventory">Zero Inventory</string>
    <string name="btn_export_inventory">Export Inventory</string>

    <string name="label_filter_location">Location Filter</string>


    <!-- Label Strings -->
    <string name="label_add_item">Add Item</string>
    <string name="label_edit_item">Edit Item</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_filter">Filter</string>
    <string name="label_home">Home</string>
    <string name="label_edit_order">Edit Inventory</string>
    <string name="label_add_order">Add Inventory</string>



    <!-- Edit Fragment Label and Defaults -->
    <string name="item_name">Item Name</string>
    <string name="item_cat">Category</string>
    <string name="item_location">Location</string>
    <string name="item_quantity">Quantity</string>
    <string name="item_quantity_default">0</string>
    <string name="item_vendor">Preferred Vendor</string>
    <string name="title_activity_edit_label">edit_label</string>
    <string name="order_name">Inventory Name</string>
    <string name="order_date">Inventory Date</string>


    <!-- App Widget -->
    <string name="widget_name">Inventory Widget</string>
    <string name="test_name">Test Inventory</string>
    <string name="widget_title">Current Inventory</string>

    <!-- Editor Strings -->
    <string name="NA">Data not Ready</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>


</resources>
