<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/widget_bg">

    <TextView
        android:id="@+id/appwidget_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/widget_title"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/widget_name"
        android:gravity="center_horizontal"
        android:text="@string/NA"
        android:textColor="@color/common_google_signin_btn_text_dark"
        android:textAppearance="@style/TextAppearance.AppCompat.Button" />

</LinearLayout>